# Homework_web_13_fastapi

./: .gitignore  docker-compose.yml  example.env  main.py  pyproject.toml  read_me.md
src/: schemas.py
src/conf/: config.ini  config.py
src/database/: db.py  model.py
src/repository/: users.py
src/routes/: auth.py  contacts.py  users.py
src/services/: auth.py  email.py
